# Maxime.github.io

.github/workflows/: cmake-single-platform.yml  static.yml
Cmake/: CMakeLists.txt
Cmake/include/: Cmake.h
Cmake/src/: CMakeLists.txt  Cmake.cpp
Cmake/src/lib/: Console.cpp  Console.h
